# QtProjects

./: .gitignore  README.md
MyQmlProject/: CMakeLists.txt  qml.qrc
MyQmlProject/qml/: main.qml
QmlProjectTemplate/src/: main.cpp
